:bug: fixed visibility to display

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -345,7 +345,7 @@ header {
   border-radius: 25px;
   width: 90%;
   margin: 20px auto;
-  visibility: hidden;
+  display: none; 
 }
 
 .row {
